# vitaliy_avdoshkin_CourseWork_4

./: README.md  main.py  main_0.py  pyproject.toml
data/: vacancies.json
src/: file_worker.py  hh_api.py  hlp.py  utils.py  vacancy.py
tests/: conftest.py  test_file_worker.py  test_utils.py  test_vacancy.py
